tests/test_assets/semantic/invalid/arrays/argument_element_count.cog
// semantic error at line 5: array initializer element count does not match array size
// 1 semantic error generated.

takes_values::(values: i32[3]) -> void {
}

test::() -> void {
    takes_values([1, 2]);
}